package com.truckdispatch.truck_dispatch.model;

public enum OperationalContext {
    MORNING_PEAK,
    DAILY_NORMAL,
    EVENING_PEAK,
    NIGHT_MODE,
    WEEKEND,
    WINTER_CONDITIONS
}
