package com.truckdispatch.truck_dispatch.controller;

import com.truckdispatch.truck_dispatch.dto.DispatchRequest;
import com.truckdispatch.truck_dispatch.dto.DispatchResult;
import com.truckdispatch.truck_dispatch.model.Alarm;
import com.truckdispatch.truck_dispatch.model.FleetEvent;
import com.truckdispatch.truck_dispatch.service.CepService;
import com.truckdispatch.truck_dispatch.service.DispatchService;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

import java.util.List;

@RestController
@RequestMapping("/api/dispatch")
public class DispatchController {

    private final DispatchService dispatchService;
    private final CepService      cepService;

    public DispatchController(DispatchService dispatchService, CepService cepService) {
        this.dispatchService = dispatchService;
        this.cepService      = cepService;
    }

    /**
     * POST /api/dispatch/process
     * Runs the full dispatch rule engine (forward chaining, scoring, BC, accumulate).
     * Hour and dayOfWeek are optional — omit to use current system time.
     */
    @PostMapping("/process")
    public ResponseEntity<DispatchResult> process(@RequestBody DispatchRequest request) {
        return ResponseEntity.ok(dispatchService.processDispatch(request));
    }

    /**
     * POST /api/dispatch/event
     * Sends a real-time fleet event into the CEP session (Drools Fusion).
     * Returns any messages generated by temporal rules.
     */
    @PostMapping("/event")
    public ResponseEntity<List<String>> processEvent(@RequestBody FleetEvent event) {
        event.setTimestamp(System.currentTimeMillis());
        return ResponseEntity.ok(cepService.processEvent(event));
    }

    /**
     * GET /api/dispatch/alarms
     * Returns all active alarms currently in the CEP session working memory.
     */
    @GetMapping("/alarms")
    public ResponseEntity<List<Alarm>> getAlarms() {
        return ResponseEntity.ok(cepService.getActiveAlarms());
    }
}
